# LifeLoop

./: Dockerfile  README.md  gradio_app.py  inference.py  main.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.py
server/: app.py
