[project]
name = "LifeLoop"
version = "0.1.0"
description = "An AI agent evaluation environment for Customer Support Triage built on the OpenEnv framework"
dependencies = [
    "openenv-core>=0.2.1",
    "pydantic",
    "fastapi",
    "uvicorn",
    "gradio",
    "requests",
    "openai",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
